hello-worldサービスのDockerfile、Makefile、Goモジュールを更新し、APIハンドラーを追加しました。また、Swagger UIの実装を追加しました。

--- a/microservices/hello-world/Dockerfile
+++ b/microservices/hello-world/Dockerfile
@@ -1,12 +1,22 @@
 # Simple Go Hello World microservice
-FROM docker.io/library/golang:1.24-alpine AS build
-WORKDIR /app
-COPY . .
-RUN go build -o main
+FROM docker.io/library/golang:bookworm AS build
+ENV GOTOOLCHAIN=auto
 
-FROM gcr.io/distroless/static
 WORKDIR /app
-COPY --from=build /app/main /app/main
+
+ENV GO111MODULE="on"
+
+COPY go.mod .
+COPY go.sum .
+RUN go mod download
+
+COPY . .
+RUN go build -o ./build/http/main ./cmd/http/main.go
+
+
+
+FROM docker.io/library/alpine:3.19
+WORKDIR /app
+COPY --from=build /app/build/http /app/build/http
 EXPOSE 8080
-USER nonroot:nonroot
-ENTRYPOINT ["/app/main"]
+CMD ["/app/build/http/main"]
