--- a/microservices/hello-world/Makefile
+++ b/microservices/hello-world/Makefile
@@ -6,19 +6,21 @@ help:
 	@echo "Usage: make [target]"
 	@echo "  build        : ビルド"
 	@echo "  run          : ローカル実行 (ビルド後)"
+	@echo "                 例: PORT=8081 HELLO_MESSAGE=Hi make run"
 	@echo "  clean        : バイナリ削除"
 	@echo "  test         : Goテスト実行"
 	@echo "  podman-build : Podmanイメージビルド"
 	@echo "  podman-run   : Podmanでコンテナ実行"
+	@echo "                 例: make podman-run PORT=8081 HELLO_MESSAGE=Hi"
 
 build:
-	go mod tidy && go build -o main main.go
+	go mod tidy && go build -o ./build/http/main ./cmd/http/main.go
 
 run: build
-	./main
+	PORT=$(PORT) HELLO_MESSAGE=$(HELLO_MESSAGE) ./build/http/main
 
 clean:
-	rm -f main
+	rm -f ./build/http/main
 
 test:
 	go test ./...
@@ -27,4 +29,4 @@ podman-build:
 	podman build -t hello-world-service .
 
 podman-run: podman-build
-	podman run --rm -p 8080:8080 hello-world-service
+	podman run --rm -e PORT=$(PORT) -e HELLO_MESSAGE="$(HELLO_MESSAGE)" -p $(or $(PORT),8080):$(or $(PORT),8080) hello-world-service
