Refactor hello handlers to use Gin framework and add Swagger documentation
- Updated HelloHandler to return plain text using Gin context.
- Updated HelloAPIHandler to return JSON response using Gin context.
- Removed old Swagger UI implementation and related Go module.
- Added Swagger documentation generation for the Hello World API.
- Updated podman-compose.yaml to remove unnecessary service configuration.
- Created Swagger JSON and YAML files for API documentation.
- Added test script to verify API endpoints.

--- a/microservices/hello-world/Dockerfile
+++ b/microservices/hello-world/Dockerfile
@@ -11,12 +11,13 @@ COPY go.sum .
 RUN go mod download
 
 COPY . .
-RUN go build -o ./build/http/main ./cmd/http/main.go
+# 完全な静的バイナリでビルド
+RUN CGO_ENABLED=0 GOOS=linux go build -o ./build/http/main ./cmd/http/main.go
 
 
 
-FROM docker.io/library/alpine:3.19
+FROM gcr.io/distroless/static
 WORKDIR /app
 COPY --from=build /app/build/http /app/build/http
-EXPOSE 8080
+EXPOSE 8081
 CMD ["/app/build/http/main"]
