--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,6 +31,7 @@
 				// ai coding
 				"codeontherocks.claude-config",
 				"github.copilot",
+				"github.copilot-chat",
 				// github
 				"mhutchie.git-graph",
                 "github.vscode-github-actions",
